# livox-so

./: .gitignore  .gitmodules  DEPLOYMENT.md  INIT_REPO.sh  README.md  SETUP.md  build-macos.sh  build.sh  config.json  dependency-reduced-pom.xml  deploy.sh  pom.xml  run-macos.sh  sync-libs.sh
.github/workflows/: build.yml
jni/: CMakeLists.txt  LivoxJNI.cpp  LivoxJNI.h
livox-sdk2-official/sdk_core/: CMakeLists.txt
livox-sdk2-official/sdk_core/base/network/unix/: network_util.cpp
scripts/: build-java.sh  build-jni.sh  build-sdk.sh
src/main/java/com/livox/demo/: LivoxJNI.java  LivoxSDKDriver.java  Main.java  PointCloudCallback.java  PointCloudStats.java
src/main/resources/: logback.xml
